# fts

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
src/: account.cc  account.h  getData.h  historicalData.cc  historicalData.h  main.cc  mainwindow.cc  mainwindow.h  streamdata.cc  streamdata.h  utilities.cc  utilities.h
src/fxWidget/: customFxWidget.cc  customFxWidget.h  fxWidget.cc  fxWidget.h
src/indicators/: momentum.cc  momentum.h  statistics.cc  statistics.h  trend.cc  trend.h  volatility.cc  volatility.h
src/plotWidget/: activeWidget.cc  activeWidget.h  chartTopMenu.cc  chartTopMenu.h  chartWidget.cc  chartWidget.h  crosshair.cc  crosshair.h  customLegend.cc  customLegend.h  plotWidget.cc  plotWidget.h  studiesWidget.cc  studiesWidget.h
src/plotWidget/indicatorWidget/: bbWidget.cc  bbWidget.h  customWidgets.cc  customWidgets.h  emaWidget.cc  emaWidget.h  indicatorWidgetHelper.cc  indicatorWidgetHelper.h  momentumWidget.cc  momentumWidget.h  smaWidget.cc  smaWidget.h
src/resources/: granularities.cc  granularities.h  indicatorAcronyms.txt  indicatorNames.txt  pairs.txt  readPairs.cc  readPairs.h
src/stylesheets/: chartWidget.qss  fxWidget.qss  mainWindow.qss  orderWidget.qss  studiesWidget.qss  utilities.qss
src/tradingWidget/: orderWidget.cc  orderWidget.h
